welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:14: error: type mismatch;
 found   : Unit
 required: Int
    	ados=ados+1
            ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
if(d>=13 && d<=19){
^